--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,21 @@
-:root {
+@import 'tailwindcss';
+
+@theme {
+  --color-brand-dark: #00684f;
+  --color-deep-sea-50: #ebfef6;
+  --color-brand-100: #d0fbe8;
+  --color-brand-200: #a4f6d5;
+  --color-brand-300: #6aebc0;
+  --color-brand-400: #2fd8a4;
+  --color-brand-500: #0abf8e;
+  --color-brand-600: #009b75;
+  --color-brand-700: #008265;
+  --color-brand-800: #03624d;
+  --color-brand-900: #045041;
+  --color-brand-950: #012d26;
+}
+
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -13,56 +30,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+} */
